# mutant-dns

./: .gitignore  LICENSE  README.md  mutant-dns-client  mutant-dns-server  pyproject.toml  requirements.txt
mutant_dns/: __init__.py  check.py  client.py  mutations.py  protocol.py  server.py  tun.py
mutant_dns/web/: __init__.py  app.py
mutant_dns/web/static/: app.js  index.html  style.css
